<resources>
    <string name="app_name">Madina Academic</string>
    <string name="welcomeSignUp">Welcome ! Sign up now</string>
    <string name="welcomePleaseEnterPhone">Welcome !, Please enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="register_now">Sign up</string>
    <string name="have_account">Already have an account ? </string>
    <string name="sign_in">Login</string>
    <string name="validate_phone_number">Phone Verification</string>
    <string name="we_send_message">We sent a verification SMS to your phone number \nEnter code</string>
    <string name="verification">Verification</string>
    <string name="dont_recieve_message">Did not recieve the Code  ?</string>
    <string name="re_send">Resend</string>
    <string name="register_in_hafez">Sign up To Hafidh !</string>
    <string name="please_enter_all_info">Please fill in the informations to create\nan account</string>
    <string name="first_name">First name</string>
    <string name="age_rate">Age Category</string>
    <string name="learning_language">Learning Language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accept_on">I Agree on </string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="register">Register</string>
    <string name="welcome_for_you">Welcome !</string>
    <string name="login_to_get_all_access">Login to enjoy the features of the application</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="dont_have_account_yet">Do not have an account ? </string>
    <string name="subscribe_now">Sign up</string>
    <string name="login_as_organization">Associations and Organizations Students Login</string>
    <string name="return_page">Back</string>
    <string name="test_name">Hi Abdullah</string>
    <string name="congrats_you">Congrats ! you completed reading</string>
    <string name="stats">Statistics</string>
    <string name="minitues">Minute</string>
    <string name="characters">Letters</string>
    <string name="search_teacher">Search for a teacher</string>
    <string name="teachers">Teachers</string>
    <string name="all">All</string>
    <string name="balance">Your Balance</string>
    <string name="plans">Plans</string>
    <string name="plan_line">Hifdh Program</string>
    <string name="home">Home</string>
    <string name="teacher">Teachers</string>
    <string name="quraan">المصحف</string>
    <string name="account">Account</string>
    <string name="avalible">Available</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="teacher_man">Male Teacher</string>
    <string name="teacher_woman">Female Teacher</string>
    <string name="teacher_lang">Teacher’s Language</string>
    <string name="select_teacher_lang">choose teacher’s language</string>
    <string name="age_categ">Age category</string>
    <string name="noval">Riwayah</string>
    <string name="choose_noval">Choose the riwayah you will read with</string>
    <string name="rate">Rating</string>
    <string name="status">Availability</string>
    <string name="show_results">Show results</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="please_check_the_confirm">Please check password match</string>
    <string name="sessions">Sessions</string>
    <string name="test_name_account">Abdullah Salah</string>
    <string name="add_account">Add Account</string>
    <string name="change_account">Change Account</string>
    <string name="profile_informations">Profile Informations</string>
    <string name="Language">Language</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="plans_and_reports">Plans and Reports</string>
    <string name="statistics">Statistics</string>
    <string name="financial_account_statement">Financial Account Statement</string>
    <string name="customer_services">Customer Services</string>
    <string name="logout">Log out</string>
    <string name="sign_in_with_exist">Login with an existing account</string>
    <string name="create_new_account">Create a new account</string>
    <string name="abdullah">Abdullah Saleh</string>
    <string name="all_information">All Informations</string>
    <string name="edit">Edit</string>
    <string name="prefered_rewaya">Preferred Riwayah</string>
    <string name="organization">Organization</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lastname">Last Name</string>
    <string name="sex">Gender:</string>
    <string name="confirm_edits">Confirm Changes</string>
    <string name="are_you_sure_changes">Are you sure to change Profile\nInformations ?</string>
    <string name="no_plans_yet">You have no plans yet</string>
    <string name="start_plan_now">Start a plan Now</string>
    <string name="current_plans">Current Plans</string>
    <string name="completed_plans">Completed Plans</string>
    <string name="amount">Amount</string>
    <string name="mention">Mention</string>
    <string name="time_period">Time Period</string>
    <string name="Grade">grade</string>
    <string name="up_to_plan">Up to plan</string>
    <string name="three_days_behind">3 days behind</string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="plan_name">Surah Al-Fatiha</string>
    <string name="completed">Done</string>
    <string name="half_page">Half page</string>
    <string name="one_month">One month</string>
    <string name="very_good">Very Good !</string>
    <string name="of_hundred">of 100</string>
    <string name="naxt">Next</string>
    <string name="choose_programm">Choose Program</string>
    <string name="search_programm">Search program..</string>
    <string name="save_plan">Save Plan</string>
    <string name="surat_albaqarah">Surah Al-Baqarah</string>
    <string name="surat_albaqarah_details">A path to memorizing and mastering Surat Al-Baqarah with a well-thought-out plan consistent with all levels</string>
    <string name="memorizaton_path">Memorization Path</string>
    <string name="memorizaton_path_details">The memorization path enables you to memorize the selected program completely by reciting the memorization daily</string>
    <string name="quarter_page_daily">Quarter Page Daily</string>
    <string name="choose_path">Choose Path</string>
    <string name="choose_amount">Choose Amount</string>
    <string name="hijri">Hijri</string>
    <string name="gregorian">Gregorian</string>
    <string name="plan_details">Plan Details</string>
    <string name="date">Date</string>
    <string name="wednesday">Wednesday</string>
    <string name="from_surah">From Surah</string>
    <string name="ayah">Ayah</string>
    <string name="to_surah">To Surah</string>
    <string name="start_date">Start Date</string>
    <string name="eliminated_days">Eliminated Days</string>
    <string name="monday">Monday</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="statusA">State</string>
    <string name="diff">Diff</string>
    <string name="good">Up to plan</string>
    <string name="details">Details</string>
    <string name="completedA">Completed</string>
    <string name="remaining">Remaining</string>
    <string name="doneA">Done</string>
    <string name="score">Score</string>
    <string name="record">Record</string>
    <string name="duration">Duration</string>
    <string name="page">Page</string>
    <string name="letter">Letter</string>
    <string name="ayah_a">Ayah</string>
    <string name="thank_god_nyou_read_today">Thank God !\nYou read today</string>
    <string name="_19_shawal_1444">19 Shawal 1444</string>
    <string name="may_allah_accept_you_read_this_month">May Allah Accept\n!You read this month</string>
    <string name="no_previous_session_for_you_yet">No Previous Session for you yet</string>
    <string name="start_now">Start Now</string>
    <string name="length">Length</string>
    <string name="from_cap">From</string>
    <string name="to_cap">To</string>
    <string name="additional_sessions">Additional\nSessions</string>
    <string name="additional_sessions_no_split">Additional Sessions</string>
    <string name="teacher_cap">Teacher <u><font fgcolor='#000000'>Mohamed Ali Ismail</font></u></string>
    <string name="rate_cap">Rate</string>
    <string name="report_cap">Report</string>
    <string name="reported">Reported</string>
    <string name="teacher_rating">Teacher Rating</string>
    <string name="leave_your_feedback_here">Leave your feedback here</string>
    <string name="send_rating">Send Rating</string>
    <string name="report_teacher">ٌReport Teacher</string>
    <string name="send_report">Send Report</string>
    <string name="period_ntotal">Period\nTotal</string>
    <string name="type">Type</string>
    <string name="minutes_ndiscounted">Minutes\nDiscounted</string>
    <string name="balance_nbefore">Balance\nbefore</string>
    <string name="remaining_nminutes">Remaining\nminutes</string>
    <string name="price">Price</string>
    <string name="consumption">Consumption</string>
    <string name="minutes_nrecharged">Minutes\nRecharged</string>
    <string name="period">Period</string>
    <string name="rated">Rated</string>
    <string name="congratulations_nyou_finished_reading">Congratulations !\nYou finished reading</string>
    <string name="great_job_nyou_read_this_year">Great Job !\nYou read this year</string>
    <string name="notification">Notification</string>
    <string name="delete_all">Delete All</string>
    <string name="wallet">Wallet</string>
    <string name="balance_a">Balance</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="vocal_sessions">Vocal sessions</string>
    <string name="_19_halalah_per_minute">19 Halalah per minute</string>
    <string name="minutes">Minutes</string>
    <string name="order_details">Order Details</string>
    <string name="balance_equals_30_minutes_video_sessions">Balance equals 30 minutes video sessions</string>
    <string name="order_and_invoice_details">Order and invoice details</string>
    <string name="vocal_sessions_minutes">Vocal sessions minutes</string>
    <string name="_240">240</string>
    <string name="price_per_minute">Price per minute</string>
    <string name="_0_19_nrs">0.19\nRS</string>
    <string name="total_bill">Total bill</string>
    <string name="_200_nrs">200\nRS</string>
    <string name="taxes">Taxes</string>
    <string name="minutes_purchased_must_be_used_before">Minutes purchased must be used before</string>
    <string name="_11_12_1444">11-12-1444</string>
    <string name="_30_minutes_nvideo_sessions">30 minutes\nVideo sessions</string>
    <string name="you_can_exchange_purchased_audio_learning_minutes_for_nvideo_learning_minutes">You can exchange purchased audio learning minutes for\nvideo learning minutes</string>
    <string name="payment">Payment</string>
    <string name="available_later">Available Later</string>
    <string name="hafs_an_assim">Hafs An Assim</string>
    <string name="arabic">Arabic</string>
    <string name="teacher_s_reference">Teacher’s reference</string>
    <string name="notify_when_available">Notify When Available</string>
    <string name="recharge">Recharge</string>
    <string name="purchases">Purchases</string>
    <string name="charge">Charge</string>
</resources>