<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_islamic_pattern"
    tools:context=".activities.WalletTwoActivity">


    <TextView
        android:id="@+id/textView153"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/darker_green_color"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        app:layout_constraintTop_toTopOf="@+id/checkBox4" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:drawablePadding="@dimen/_12sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/wallet"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:drawableStartCompat="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_and_invoice_details"
        android:fontFamily="@font/cairo_bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/darker_green_color"
        android:layout_marginStart="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView142">

        <TextView
            android:id="@+id/textView144"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/vocal_sessions_minutes"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView145" />

        <TextView
            android:id="@+id/textView145"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/_240"
            android:textColor="@color/darker_green_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/price_per_minute"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView146" />

        <TextView
            android:id="@+id/textView146"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center_horizontal"
            android:text="@string/_0_19_nrs"
            android:textColor="@color/darker_green_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/total_bill"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView147" />

        <TextView
            android:id="@+id/textView147"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center_horizontal"
            android:text="@string/_200_nrs"
            android:textColor="@color/darker_green_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/taxes"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView148" />

        <TextView
            android:id="@+id/textView148"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center_horizontal"
            android:text="@string/_200_nrs"
            android:textColor="@color/darker_green_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout11"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout11"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout11">

        <TextView
            android:id="@+id/textView149"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semi_bold"
            android:text="@string/minutes_purchased_must_be_used_before"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout11"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout11"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout11" />

        <TextView
            android:id="@+id/textView150"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_semi_bold"
            android:text="@string/_11_12_1444"
            android:textColor="@color/darker_green_color" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout11"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/textView152"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center_horizontal"
            android:text="@string/_30_minutes_nvideo_sessions"
            android:textColor="@color/darker_green_color"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView151"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/you_can_exchange_purchased_audio_learning_minutes_for_nvideo_learning_minutes"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/accept_on"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:text="@string/payment"
        android:textAllCaps="false"
        android:fontFamily="@font/cairo_bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_green_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout11"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout11" />

</androidx.constraintlayout.widget.ConstraintLayout>