<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_islamic_pattern"
    tools:context=".activities.LoginPublicActivity">






    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ig_login_header" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/welcome_for_you"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center_horizontal"
        android:text="@string/login_to_get_all_access"
        android:textColor="@color/sub_text_color"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <include
        android:id="@+id/include2"
        layout="@layout/include_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text_regular"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_9sdp"
        android:ems="10"
        android:fontFamily="@font/cairo_medium"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_9sdp"
        android:textColorHint="@color/sub_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:passwordToggleEnabled="true" />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/cairo_medium"
        android:text="@string/forget_password"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_green_button"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/dont_have_account_yet"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/subscribe_now"
            android:textColor="@color/darker_green_color" />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_button_outlier_green"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login_as_organization"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>